// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.
//
// Test protocol for kudu RPC.
package kudu.rpc_test;

// import "kudu/kudu_rpc/rpc_header.proto";

message PingRequestPB {

}

message PingResponsePB {

}

service PingService {
  rpc Ping(PingRequestPB) returns(PingResponsePB);
}

message UniqueIdPB {
  required int64 hi = 1;
  required int64 lo = 2;
}

message RowBatchPB {
  required int32 num_rows = 1;
  repeated int32 row_tuples = 2;
  repeated int32 tuple_offsets = 3;
  required bytes tuple_data = 4;
  required int32 uncompressed_size = 5;
  required int32 compression_type = 6;
}

message TransmitDataRequestPB {
  required UniqueIdPB dest_fragment_instance_id = 1;
  required int32 sender_id = 2;
  required int32 dest_node_id = 3;
  required RowBatchPB row_batch = 4;
  required bool eos = 5;
}

message TransmitDataResponsePB {

}

service ImpalaKRPCService {
  rpc TransmitData(TransmitDataRequestPB) returns (TransmitDataResponsePB);
}
